# AVEditor

./: .gitattributes  README.md  build.gradle  config.gradle  function_.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
avedit/: build.gradle
avedit/src/main/: AndroidManifest.xml
avedit/src/main/cpp/: CMakeLists.txt  kavedit.cpp  kavplayer.cpp
avedit/src/main/cpp/avplay/: IPlayer.h
avedit/src/main/cpp/avplay/audio/: IAudioPlayer.cpp  KAV_SL_AudioPlayer.h
avedit/src/main/cpp/avplay/builder/: IPlayerBuilder.h
avedit/src/main/cpp/avplay/decode/: KAVDecode.h
avedit/src/main/cpp/avplay/demux/: IDemux.cpp  KAVDemux.h
avedit/src/main/cpp/avplay/resample/: IResample.cpp  KAVResample.h
avedit/src/main/cpp/avplay/video/: AVShader.cpp  AVShader.h  IVideoPlayer.h  KAVEGL.h  KAVTxture.cpp  KAV_GL_VideoPlayer.cpp  KAV_GL_VideoPlayer.h
avedit/src/main/cpp/base/: IObserver.cpp  IThread.cpp  IThread.h
avedit/src/main/cpp/base/data/: AVData.h  AVParameter.cpp
aveditor/: build.gradle
aveditor/src/main/: AndroidManifest.xml
aveditor/src/main/cpp/: CMakeLists.txt  avplayer.cpp  avtools.cpp
aveditor/src/main/cpp/audio/: AVAudioTransfer.cpp  AVAudioTransfer.h  AV_SL_AudioPlayer.cpp  AV_SL_AudioPlayer.h  IAudioPlayer.cpp  IAudioPlayer.h  ITransfer.cpp  ITransfer.h  KAV_SL_AudioPlayer.cpp
aveditor/src/main/cpp/base/: IObserver.cpp  IObserver.h  IThread.cpp  IThread.h
aveditor/src/main/cpp/base/data/: AVData.cpp  AVData.h  AVParameter.h
aveditor/src/main/cpp/builder/: AVPlayerBuilder.cpp  AVPlayerBuilder.h  AVToolsBuilder.cpp  AVToolsBuilder.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IToolsBuilder.cpp  IToolsBuilder.h  KAVPlayerBuilder.cpp  KAVPlayerBuilder.h
aveditor/src/main/cpp/callback/: JNICallback.cpp  JNICallback.h
aveditor/src/main/cpp/decode/: AVDecode.cpp  AVDecode.h  IDecode.cpp  IDecode.h  KAVDecode.cpp
aveditor/src/main/cpp/demux/: AVDemux.cpp  AVDemux.h  IDemux.cpp  IDemux.h  KAVDemux.cpp
aveditor/src/main/cpp/editor/: AVEditor.cpp  AVEditor.h  IEditor.cpp  IEditor.h
aveditor/src/main/cpp/entity/: MediaEntity.h  SoundTouchEngine.h
aveditor/src/main/cpp/muxer/: AVMuxer.cpp  AVMuxer.h  AVPacketPool.cpp  AVPacketPool.h  IMuxer.cpp  IMuxer.h  audio_packet_queue.cpp  audio_packet_queue.h  h264_util.h  mp4_muxer.cpp  mp4_muxer.h  video_packet_queue.cpp  video_packet_queue.h
aveditor/src/main/cpp/play/: IPlayer.cpp  IPlayer.h  IPlayerProxy.cpp  IPlayerProxy.h
aveditor/src/main/cpp/resample/: AVResample.cpp  AVResample.h  IResample.h  KAVResample.cpp
aveditor/src/main/cpp/soundtouch/: AVSoundTouch.cpp
aveditor/src/main/cpp/soundtouch/include/: Makefile.am  STTypes.h
aveditor/src/main/cpp/soundtouch/source/: AAFilter.h  BPMDetect.cpp  FIFOSampleBuffer.cpp  FIRFilter.h  InterpolateCubic.cpp  InterpolateCubic.h  InterpolateLinear.h  InterpolateShannon.cpp  InterpolateShannon.h  Makefile.am  RateTransposer.h  SoundTouch.cpp  SoundTouch.vcxproj  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86.cpp  mmx_optimized.cpp  sse_optimized.cpp
aveditor/src/main/cpp/utils/: AVQueue.h  SoundTouchUtils.cpp  SoundTouchUtils.h
aveditor/src/main/cpp/video/: AVEGL.cpp  AVEGL.h  AVShader.h  AVTxture.cpp  AVTxture.h  AV_GL_VideoPlayer.cpp  AV_GL_VideoPlayer.h  IEGL.h  ITexture.h  IVideoPlayer.cpp  IVideoPlayer.h  KAV_GL_VideoPlayer.cpp
aveditor/src/main/cpp/xlog/include/: android_xlog.h  xlogger.h
file/: 123.h264  record_pcm_441.pcm  soundtouch.pcm  test.aac  test.h264  traces.txt
file/bugreport-ALP-AL00-HUAWEIALP-AL00-2020-08-31-13-29-24/: dumpstate_log.txt  main_entry.txt
file/bugreport-ALP-AL00-HUAWEIALP-AL00-2020-08-31-13-29-24/lshal-debug/: android.hardware.audio.effect@5.0::IEffectsFactory_default.txt  android.hardware.audio@5.0::IDevicesFactory_default.txt  android.hardware.configstore@1.0::ISurfaceFlingerConfigs_default.txt  android.hardware.configstore@1.1::ISurfaceFlingerConfigs_default.txt  android.hardware.health@2.0::IHealth_backup.txt  android.hardware.ir@1.0::IConsumerIr_default.txt  android.hardware.keymaster@3.0::IKeymasterDevice_default.txt  android.hardware.light@2.0::ILight_default.txt  android.hardware.neuralnetworks@1.0::IDevice_ipuadaptor.txt  android.hardware.neuralnetworks@1.1::IDevice_ipuadaptor.txt  android.hardware.power.stats@1.0::IPowerStats_default.txt  android.hardware.power@1.0::IPower_default.txt  android.hardware.radio@1.0::IRadio_slot3.txt  android.hardware.radio@1.1::IRadio_slot3.txt  android.hardware.radio@1.2::IRadio_slot3.txt  android.hardware.radio@1.3::IRadio_slot3.txt  android.hardware.radio@1.4::IRadio_slot3.txt  android.hardware.sensors@1.0::ISensors_default.txt  android.hardware.thermal@1.0::IThermal_default.txt  android.hardware.wifi@1.3::IWifi_default.txt  android.hidl.base@1.0::IBase_HwInSExtNode.txt  android.hidl.base@1.0::IBase_backup.txt  android.hidl.base@1.0::IBase_default.txt  android.hidl.base@1.0::IBase_eid.txt  android.hidl.base@1.0::IBase_hiaiserver.txt  android.hidl.base@1.0::IBase_hiaiserver_modelmanager.txt  android.hidl.base@1.0::IBase_hiaiserver_v2.txt  android.hidl.base@1.0::IBase_huawei.camera.cfgsvr.txt  android.hidl.base@1.0::IBase_huawei.cameraresource.service.txt  android.hidl.base@1.0::IBase_huaweiantitheft.txt  android.hidl.base@1.0::IBase_huaweisigntool.txt  android.hidl.base@1.0::IBase_hwfactoryinterface_hal.txt  android.hidl.base@1.0::IBase_hwhiview_hal.txt  android.hidl.base@1.0::IBase_hwsched.txt  android.hidl.base@1.0::IBase_hwstp.txt  android.hidl.base@1.0::IBase_hwvoiceid.txt  android.hidl.base@1.0::IBase_ipuadaptor.txt  android.hidl.base@1.0::IBase_perfgenius.txt  android.hidl.base@1.0::IBase_perfpolicy.txt  android.hidl.base@1.0::IBase_rildi.txt  (+105 more)
file/bugreport-ALP-AL00-HUAWEIALP-AL00-2020-08-31-13-29-24/proto/: SurfaceFlinger_CRITICAL.proto  activity.proto  incident.proto  window_CRITICAL.proto
gradle/wrapper/: gradle-wrapper.properties
shell/: build_fdk-aac_android_all.sh  build_fdkaac_all.sh  build_ffmpeg_all.sh  build_ffmpeg_android_all.sh  build_ffmpeg_with_x264_fdkaac.sh
thirdparties/ffmpeg/: build_android_all.sh
(+525 files in other folders)
